// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match base 1`] = `
<div>
  <div
    class="nut-pickerview"
  >
    <div
      class="nut-pickerview-list"
    >
      <div
        class="nut-pickerview-roller"
        style="transition: transform 0ms cubic-bezier(0.17, 0.89, 0.45, 1); transform: rotate3d(1, 0, 0, 20deg);"
      >
        <div
          class="nut-pickerview-roller-item nut-pickerview-roller-item-active"
          style="transform: rotate3d(1, 0, 0, -20deg) translate3d(0px, 0px, 115px);"
        >
          南京市
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -40deg) translate3d(0px, 0px, 115px);"
        >
          无锡市
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -60deg) translate3d(0px, 0px, 115px);"
        >
          海北藏族自治区
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -80deg) translate3d(0px, 0px, 115px);"
        >
          北京市
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -100deg) translate3d(0px, 0px, 115px);"
        >
          连云港市
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -120deg) translate3d(0px, 0px, 115px);"
        >
          大庆市
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -140deg) translate3d(0px, 0px, 115px);"
        >
          绥化市
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -160deg) translate3d(0px, 0px, 115px);"
        >
          潍坊市
        </div>
        <div
          class="nut-pickerview-roller-item nut-pickerview-roller-item-hidden"
          style="transform: rotate3d(1, 0, 0, -180deg) translate3d(0px, 0px, 115px);"
        >
          乌鲁木齐市
        </div>
      </div>
    </div>
    <div
      class="nut-pickerview-mask"
    />
    <div
      class="nut-pickerview-indicator"
    />
  </div>
</div>
`;

exports[`should match cascade 1`] = `
<div>
  <div
    class="nut-pickerview"
  >
    <div
      class="nut-pickerview-list"
    >
      <div
        class="nut-pickerview-roller"
        style="transition: transform 0ms cubic-bezier(0.17, 0.89, 0.45, 1); transform: rotate3d(1, 0, 0, 20deg);"
      >
        <div
          class="nut-pickerview-roller-item nut-pickerview-roller-item-active"
          style="transform: rotate3d(1, 0, 0, -20deg) translate3d(0px, 0px, 115px);"
        >
          北京 | 测试
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -40deg) translate3d(0px, 0px, 115px);"
        >
          上海 | 测试
        </div>
      </div>
    </div>
    <div
      class="nut-pickerview-list"
    >
      <div
        class="nut-pickerview-roller"
        style="transition: transform 0ms cubic-bezier(0.17, 0.89, 0.45, 1); transform: rotate3d(1, 0, 0, 0deg);"
      >
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -20deg) translate3d(0px, 0px, 115px);"
        >
          朝阳区 | 测试
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -40deg) translate3d(0px, 0px, 115px);"
        >
          海淀区 | 测试
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -60deg) translate3d(0px, 0px, 115px);"
        >
          大兴区 | 测试
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -80deg) translate3d(0px, 0px, 115px);"
        >
          东城区 | 测试
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -100deg) translate3d(0px, 0px, 115px);"
        >
          西城区 | 测试
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -120deg) translate3d(0px, 0px, 115px);"
        >
          丰台区 | 测试
        </div>
      </div>
    </div>
    <div
      class="nut-pickerview-mask"
    />
    <div
      class="nut-pickerview-indicator"
    />
  </div>
</div>
`;

exports[`should match onchange 1`] = `
<div>
  <div
    class="nut-pickerview"
  />
</div>
`;

exports[`should render tiled 1`] = `
<div>
  <div
    class="nut-pickerview"
  >
    <div
      class="nut-pickerview-list"
    >
      <div
        class="nut-pickerview-roller"
        style="transition: transform 0ms cubic-bezier(0.17, 0.89, 0.45, 1); transform: translate3d(0, 0px, 0);"
      >
        <div
          class="nut-pickerview-roller-item-tiled nut-pickerview-roller-item-active"
        >
          南京市
        </div>
        <div
          class="nut-pickerview-roller-item-tiled"
        >
          无锡市
        </div>
        <div
          class="nut-pickerview-roller-item-tiled"
        >
          海北藏族自治区
        </div>
        <div
          class="nut-pickerview-roller-item-tiled"
        >
          北京市
        </div>
        <div
          class="nut-pickerview-roller-item-tiled"
        >
          连云港市
        </div>
        <div
          class="nut-pickerview-roller-item-tiled"
        >
          大庆市
        </div>
        <div
          class="nut-pickerview-roller-item-tiled"
        >
          绥化市
        </div>
        <div
          class="nut-pickerview-roller-item-tiled"
        >
          潍坊市
        </div>
        <div
          class="nut-pickerview-roller-item-tiled"
        >
          乌鲁木齐市
        </div>
      </div>
    </div>
    <div
      class="nut-pickerview-mask"
    />
    <div
      class="nut-pickerview-indicator"
    />
  </div>
</div>
`;

exports[`should render with Multi Column 1`] = `
<div>
  <div
    class="nut-pickerview"
  >
    <div
      class="nut-pickerview-list"
    >
      <div
        class="nut-pickerview-roller"
        style="transition: transform 0ms cubic-bezier(0.17, 0.89, 0.45, 1); transform: rotate3d(1, 0, 0, 0deg);"
      >
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -20deg) translate3d(0px, 0px, 115px);"
        >
          周一
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -40deg) translate3d(0px, 0px, 115px);"
        >
          周二
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -60deg) translate3d(0px, 0px, 115px);"
        >
          周三
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -80deg) translate3d(0px, 0px, 115px);"
        >
          周四
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -100deg) translate3d(0px, 0px, 115px);"
        >
          周五
        </div>
      </div>
    </div>
    <div
      class="nut-pickerview-list"
    >
      <div
        class="nut-pickerview-roller"
        style="transition: transform 0ms cubic-bezier(0.17, 0.89, 0.45, 1); transform: rotate3d(1, 0, 0, 0deg);"
      >
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -20deg) translate3d(0px, 0px, 115px);"
        >
          上午
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -40deg) translate3d(0px, 0px, 115px);"
        >
          下午
        </div>
        <div
          class="nut-pickerview-roller-item"
          style="transform: rotate3d(1, 0, 0, -60deg) translate3d(0px, 0px, 115px);"
        >
          晚上
        </div>
      </div>
    </div>
    <div
      class="nut-pickerview-mask"
    />
    <div
      class="nut-pickerview-indicator"
    />
  </div>
</div>
`;
